@@ -107,6 +107,14 @@ o multiple_ccaches
   sets the KRB5CCNAME variable after doing only one of the two.  This
   option is usually not necessary for most services, but the option is
   provided as a workaround.
+o no_validate
+  no_validate = service1 service2
+  Don't try to validate initial credentials.
+o no_validate_user_user
+  no_validate_user_user = service1 service2
+  Even if validation fails due to permissions problems, don't attempt to
+  validate initial credentials using previously-obtained credentials in the
+  default ccache.
 o no_user_check
   Go ahead and authenticate users for whom getpwnam() returns no information.
   Credential cache and ticket files will be created and owned by the current
@@ -160,15 +168,6 @@ o use_shmem
   managment to be performed in different processes, so long as the PAM
   environment is correctly propagated from one to the other.  A default list
   of services can be set at compile-time.
-o validate
-  validate = service1 service2
-  Validate initial credentials.  Credentials will be validated if the specified
-  keytab file can be read, using a suitable service whose key is in the file.
-o validate_user_user
-  validate_user_user = service1 service2
-  If validation is enabled, attempt to validate initial credentials using
-  previously-obtained credentials in the default ccache if validation using a
-  keytab is not possible.
 
 Configuration file only:
 o afs_cells = cell1 cell2 cell3 cell4=afs/cell4@EXAMPLE.COM
