@@ -192,6 +192,20 @@ remote users who may not have local access.  Note that such a server should
 have an encrypted connection with its client in order to avoid allowing the
 user's password to be eavesdropped.
 
+.IP no_validate
+.IP "no_validate=\fIvlock\fR"
+tells pam_krb5.so to not attempt to use the local keytab to verify that the TGT
+obtained from the realm's servers has not been spoofed.
+The \fBlibdefaults\fR \fBverify_ap_req_nofail\fR setting can
+affect whether or not errors reading the keytab which are encountered during
+validation will be suppressed.
+
+.IP no_validate_user_user
+.IP "no_validate_user_user=\fIsshd\fR"
+specifies that, when attempting validation of the TGT, to not attempt
+user-to-user authentication using a previously-obtainted TGT in the default
+ccache if validation can't be performed using a keytab.
+
 @MAN_AFS@.IP null_afs
 @MAN_AFS@tells pam_krb5.so, when it attempts to set tokens, to try to get
 @MAN_AFS@credentials for services with names which resemble afs@\fIREALM\fR
@@ -285,19 +299,6 @@ to enforce use of less-easy-to-guess passwords.
 tells pam_krb5.so to pass credentials from the authentication service function
 to the session management service function using shared memory, or to do so for
 specific services.
-
-.IP validate
-.IP "validate=\fIsshd\fR"
-tells pam_krb5.so to verify that the TGT obtained from the realm's servers has
-not been spoofed.  Note that the process which is performing authentication
-must be able to read the \fIkeytab\fR in order for validation to be possible.
-
-.IP validate_user_user
-.IP "validate_user_user = \fItrue\fR|\fIfalse\fR|\fIservice\ [...]\fR"
-specifies whether or not, when attempting validation of the TGT, to attempt
-user-to-user authentication using a previously-obtainted TGT in the default
-ccache if validation can't be performed using a keytab.  The default is
-\fBtrue\fR.
 
 .SH FILES
 \fI/etc/krb5.conf\fR
